--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <div id="user-data" ngModelGroup="userData"
+            #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input 
@@ -10,9 +11,10 @@
                 id="username" 
                 class="form-control"
                 ngModel 
-                name="username" >
+                name="username"
+                required >
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" (click)="suggestUserName()" type="button">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
@@ -20,23 +22,61 @@
               id="email" 
               class="form-control"
               ngModel
-              name="email">
-
-          </div>
+              name="email"
+              required
+              email
+              #email="ngModel" >
+            <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
+          </div>          
         </div>
+        <p *ngIf="!userData.valid && userData.touched">Userdata is invalid</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select 
             id="secret" 
             class="form-control"
             ngModel
-            name="secret">
+            name="secret"
+            [ngModel]="defaultQuestion" >
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <div class="form-group">
+          <textarea 
+            name="questionAnswer" 
+            rows="3"
+            class="form-control"
+            [(ngModel)]="yourAnswer"
+            ></textarea>
+        </div>
+        <p>Your answer : {{yourAnswer}}</p>
+
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input 
+                type="radio"
+                name="gender"
+                ngModel
+                [value]="gender" />
+                {{ gender }}
+          </label>
+        </div>
+
+        <button 
+          class="btn btn-primary" 
+          type="submit"
+          [disabled]="!f.valid">Submit</button>
       </form>
     </div>
   </div>
+</div>
+<hr>
+<div class="row" *ngIf="submitted">
+  <h3>User Data</h3>
+  <p>Username : {{ user.username }} </p>
+  <p>Email : {{ user.email }} </p>
+  <p>Question : {{ user.question }} </p>
+  <p>Answer : {{ user.answer }} </p>
+  <p>Gender : {{ user.gender }} </p>
 </div>
